fixing piechart numbers, tweaking 404 page, making sure styles from sass do not overlap and enabling animations in some pages, animations pending

--- a/ferro/src/Containers/Home/Home.scss
+++ b/ferro/src/Containers/Home/Home.scss
@@ -48,6 +48,7 @@
     .main-logo{
         width: 90%;
         margin: 0 auto;
+        margin-bottom: 200px;
         a{
             width: 90%;
             margin: 0 auto;
